tests/miniJava/neg/003861_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { if this ( 0 ) { } else { } } }
